# scribble

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  STYLEGUIDE.md
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: ci.yaml  coverage.yaml  publish.yaml  release-publish.yaml  release.yaml  security-audit.yaml
demo/: demo.tape
scripts/: build-all.sh  build-macos-release.sh  build.sh  test-all.sh
src/: audio_pipeline.rs  backend.rs  ctx.rs  decode.rs  decoder.rs  demux.rs  error.rs  incremental.rs  json_array_encoder.rs  lib.rs  logging.rs  opts.rs  output_type.rs  samples_rx.rs  scribble.rs  segment_encoder.rs  segments.rs  token.rs  vad.rs  vtt_encoder.rs  wav.rs
src/backends/: mod.rs  silero.rs  whisper.rs
src/backends/whisper/: ctx.rs  incremental.rs  logging.rs  mod.rs  segments.rs  token.rs  vad.rs
src/pipe_reader/: mod.rs  reader.rs  receiver.rs
src/vad/: mod.rs  processor.rs  stream.rs  to_speech.rs
tests/: README.md  decoder_non_sync_reader.rs  scribble.rs  silero_backend.rs
tests/fixtures/: README.md
