[package]
name = "scribble"
version = "0.1.5"
edition = "2024"

description = "High-level Rust API for audio transcription using Whisper"
license = "MIT"
repository = "https://github.com/itsmontoya/scribble"
readme = "README.md"
authors = ["Josh Montoya <josh@montoya.io>"]
keywords = ["whisper", "transcription", "speech-to-text"]
categories = ["multimedia::audio"]

[dependencies]
anyhow = "1"
axum = "0.8.7"
clap = { version = "4.5", features = ["derive"] }
hound = "3"
num_cpus = "1"
whisper-rs = { version = "0.15" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
indicatif = "0.18"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
rubato = "0.16"
symphonia = { version = "0.5", features = ["all"] }
tempfile = "3"

# Optional ONNX backend support (Silero ASR).
#
# We use ONNX Runtime via `ort` to support models that include ONNX control-flow ops.
ort = { version = "2.0.0-rc.6", optional = true, features = ["ndarray", "download-binaries"] }

[features]
# Keep the default build lightweight (Whisper-only).
default = []

# Enable the experimental Silero ASR backend (ONNX via `tract-onnx`).
silero-onnx = ["dep:ort"]
