[package]
name = "scribble"
version = "0.4.2"
edition = "2024"

description = "High-level Rust API for audio transcription using Whisper"
license = "MIT"
repository = "https://github.com/itsmontoya/scribble"
readme = "README.md"
authors = ["Josh Montoya <josh@montoya.io>"]
keywords = ["whisper", "transcription", "speech-to-text"]
categories = ["multimedia::audio"]

[dependencies]
anyhow = "1"
axum = { version = "0.8.7", features = ["multipart"] }
clap = { version = "4.5", features = ["derive"] }
hound = "3"
num_cpus = "1"
whisper-rs = { version = "0.15" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
indicatif = "0.18"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
rubato = "0.16"
symphonia = { version = "0.5", features = ["all"] }
tempfile = "3"
prometheus = "0.13"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
